--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -38,8 +38,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/username_hint"
-                android:inputType="textPersonName"
-                android:text="asdf" />
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/passwordField"
@@ -47,8 +46,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:text="asdf1234" />
+                android:inputType="textPassword" />
 
             <Button
                 android:id="@+id/signInButton"
